[package]
name = "sso-jwt-lib"
version = "0.3.0"
edition = "2021"
description = "SSO JWT core library with hardware-backed secure caching"
license = "MIT"

[dependencies]
anyhow = "1"
base64 = "0.22"
dirs = "6"
reqwest = { version = "0.12", features = ["blocking", "rustls-tls", "json"], default-features = false }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
open = "5"
zeroize = { version = "1", features = ["derive"] }

[target.'cfg(target_os = "macos")'.dependencies]
enclaveapp-core = { workspace = true }
enclaveapp-apple = { workspace = true, features = ["encryption"] }

[target.'cfg(target_os = "windows")'.dependencies]
enclaveapp-core = { workspace = true }
enclaveapp-windows = { workspace = true, features = ["encryption"] }

[target.'cfg(target_os = "linux")'.dependencies]
keyring = { version = "3", features = ["sync-secret-service"] }
enclaveapp-bridge = { workspace = true }
enclaveapp-wsl = { workspace = true }

[dev-dependencies]
mockito = "1"
tempfile = "3"

[lints]
workspace = true
