[package]
name = "sso-jwt-lib"
version.workspace = true
edition.workspace = true
description = "SSO JWT core library with hardware-backed secure caching"
license.workspace = true

[dependencies]
anyhow = "1"
base64 = "0.22"
dirs = "6"
reqwest = { version = "0.12", features = ["blocking", "rustls-tls", "json"], default-features = false }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
open = "5"
zeroize = { version = "1", features = ["derive"] }

[dependencies.enclaveapp-app-storage]
workspace = true

[dev-dependencies]
mockito = "1"
tempfile = "3"
enclaveapp-app-storage = { workspace = true, features = ["mock"] }

[lints]
workspace = true
