[package]
name = "sso-jwt-napi"
version.workspace = true
edition.workspace = true
description = "Node.js native binding for sso-jwt (napi-rs)"
license.workspace = true

[lib]
crate-type = ["cdylib"]

[dependencies]
anyhow = "1"
napi = { version = "2", features = ["tokio_rt"] }
napi-derive = "2"
sso-jwt-lib = { path = "../sso-jwt-lib" }
tokio = { version = "1", features = ["rt"] }

[build-dependencies]
napi-build = "2"

[lints]
workspace = true
