[package]
name = "sso-jwt-tpm-bridge"
version = "0.4.1"
edition = "2021"
description = "Windows TPM 2.0 bridge for sso-jwt WSL support"
license = "MIT"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
base64 = "0.22"
enclaveapp-core = { workspace = true }
enclaveapp-bridge = { workspace = true }

[target.'cfg(target_os = "windows")'.dependencies]
enclaveapp-windows = { workspace = true, features = ["encryption"] }

[lints]
workspace = true
