[package]
name = "sso-jwt"
version = "0.5.0"
edition = "2021"
description = "SSO JWT CLI with hardware-backed secure caching"
license = "MIT"

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
reqwest = { version = "0.12", features = ["blocking", "rustls-tls"], default-features = false }
sso-jwt-lib = { path = "../sso-jwt-lib" }
enclaveapp-wsl = { workspace = true }

[lints]
workspace = true
