[package]
name = "sso-jwt"
version.workspace = true
edition.workspace = true
description = "SSO JWT CLI with hardware-backed secure caching"
license.workspace = true

[target.'cfg(target_os = "windows")'.build-dependencies]
winresource = "0.1"

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
reqwest = { version = "0.12", features = ["blocking", "rustls-tls"], default-features = false }
sso-jwt-lib = { path = "../sso-jwt-lib" }
enclaveapp-app-storage = { workspace = true }
enclaveapp-wsl = { workspace = true }

[lints]
workspace = true
